<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/abg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codingstuff.ApfActivity">

    <RadioButton
        android:id="@+id/option1RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="170dp"
        android:background="@color/white"
        android:padding="5dp"
        android:text="@string/need_fire_engine"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/sosButtonapf"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/oval_shape"
        android:gravity="center"
        android:text="@string/sos"
        android:textColor="#7CB342"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/contactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sosButtonapf"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="67dp"
        android:background="@drawable/lavender_border"
        android:text="@string/press_the_sos_button"
        android:textSize="25sp" />
</RelativeLayout>
