<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codingstuff.Authendication">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_the_authnedication_type"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/lavender"
        android:layout_marginTop="100dp"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="400dp"
        android:layout_height="380dp">

        <RadioButton
            android:id="@+id/RadioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="170dp"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/RadioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/apf"
            android:textAlignment="center"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="150dp"
        android:text="NEXT"
        android:textSize="20sp"
        android:background="@drawable/lavender_border"/>
</RelativeLayout>