<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abg"
    tools:context="com.codingstuff.Phone">

    <EditText
        android:id="@+id/phoneEditTextNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/type_your_number"
        android:inputType="number"
        android:paddingStart="16dp"
        android:textColor="@color/black"
        android:textColorHint="#606060"
        app:layout_constraintBottom_toTopOf="@+id/sendOTPBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/sendOTPBtn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="116dp"
        android:background="@color/btn_color"
        android:text="@string/send_otp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="  +91"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/phoneEditTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/lavender_border"
        android:text="@string/login_with_mobile_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="422dp" />

    <ProgressBar
        android:id="@+id/phoneProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@color/btn_color"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>